{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 101,
  "lineage": "bc03f8fe-6683-42fd-cde0-b1b6bdec69dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02120be819515cf4c",
            "arn": "arn:aws:ec2:us-east-1:139561979448:elastic-ip/eipalloc-02120be819515cf4c",
            "association_id": "eipassoc-0ec8dbe32c7fd4120",
            "domain": "vpc",
            "id": "eipalloc-02120be819515cf4c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0213307635cc2609d",
            "private_dns": "ip-10-0-1-237.ec2.internal",
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-100-30-111-38.compute-1.amazonaws.com",
            "public_ip": "100.30.111.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petclinic-nat-eip"
            },
            "tags_all": {
              "Name": "petclinic-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:internet-gateway/igw-07fd3290828dd1ef1",
            "id": "igw-07fd3290828dd1ef1",
            "owner_id": "139561979448",
            "tags": {
              "Name": "petclinic-igw"
            },
            "tags_all": {
              "Name": "petclinic-igw"
            },
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02120be819515cf4c",
            "association_id": "eipassoc-0ec8dbe32c7fd4120",
            "connectivity_type": "public",
            "id": "nat-098d3a1280de24bd3",
            "network_interface_id": "eni-0213307635cc2609d",
            "private_ip": "10.0.1.237",
            "public_ip": "100.30.111.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a7aad05db2f77c1",
            "tags": {
              "Name": "petclinic-nat"
            },
            "tags_all": {
              "Name": "petclinic-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.petclinic",
            "aws_subnet.public",
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:route-table/rtb-08759822bab900280",
            "id": "rtb-08759822bab900280",
            "owner_id": "139561979448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-098d3a1280de24bd3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-private-rt"
            },
            "tags_all": {
              "Name": "petclinic-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.petclinic",
            "aws_nat_gateway.petclinic",
            "aws_subnet.public",
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:route-table/rtb-01c6b0535f47c2691",
            "id": "rtb-01c6b0535f47c2691",
            "owner_id": "139561979448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fd3290828dd1ef1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-public-rt"
            },
            "tags_all": {
              "Name": "petclinic-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.petclinic",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d12ad7f748be4b06",
            "route_table_id": "rtb-08759822bab900280",
            "subnet_id": "subnet-03b33ed4ee2e910ba"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.petclinic",
            "aws_nat_gateway.petclinic",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea6cfb18273d520",
            "route_table_id": "rtb-08759822bab900280",
            "subnet_id": "subnet-04f7ac63f5e6cb12a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.petclinic",
            "aws_nat_gateway.petclinic",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e1d98528e462381",
            "route_table_id": "rtb-01c6b0535f47c2691",
            "subnet_id": "subnet-07a7aad05db2f77c1"
          },
          "dependencies": [
            "aws_internet_gateway.petclinic",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4ee9389ac24ada5",
            "route_table_id": "rtb-01c6b0535f47c2691",
            "subnet_id": "subnet-0e62cefe3cb51b79c"
          },
          "dependencies": [
            "aws_internet_gateway.petclinic",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:security-group/sg-088f8cd403a95e1ef",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088f8cd403a95e1ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "petclinic-eks-sg",
            "name_prefix": "",
            "owner_id": "139561979448",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-eks-sg"
            },
            "tags_all": {
              "Name": "petclinic-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:subnet/subnet-03b33ed4ee2e910ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b33ed4ee2e910ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139561979448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-private-1",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "petclinic-private-1",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "dependencies": [
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:subnet/subnet-04f7ac63f5e6cb12a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f7ac63f5e6cb12a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139561979448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-private-2",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "petclinic-private-2",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "dependencies": [
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:subnet/subnet-07a7aad05db2f77c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a7aad05db2f77c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "139561979448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-public-1",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "petclinic-public-1",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "dependencies": [
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:subnet/subnet-0e62cefe3cb51b79c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e62cefe3cb51b79c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "139561979448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-public-2",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "petclinic-public-2",
              "kubernetes.io/cluster/petclinic-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0860c99d02dca6e9b"
          },
          "dependencies": [
            "aws_vpc.petclinic",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139561979448:vpc/vpc-0860c99d02dca6e9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00430eb9be1a2122e",
            "default_route_table_id": "rtb-02e9a782db4da93a0",
            "default_security_group_id": "sg-0c1fad7561173229e",
            "dhcp_options_id": "dopt-04a873431bb24af29",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0860c99d02dca6e9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e9a782db4da93a0",
            "owner_id": "139561979448",
            "tags": {
              "Environment": "production",
              "Name": "petclinic-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "petclinic-vpc"
            }
          }
        }
      ]
    }
  ]
}